--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@ permalink:      /:year-:month-:day/:title
 # Setup
 title:          Tale
 paginate:       5
-baseurl:        "/tale"
-url:            "https://chesterhow.github.io"
+baseurl:        ""
+url:            "https://tech-the8days.github.io"
 
 # Assets
 sass:
