update skin post

--- a/_config.yml
+++ b/_config.yml
@@ -17,9 +17,9 @@ markdown:       kramdown
 
 # About
 author:
-  name:         Chester How
-  url:          http://chester.how
-  email:        chesterhow@gmail.com
+  name:         Walter
+  url:          http://8days.com
+  email:        tech@the8days.com
 
 # Custom vars
 version:        3.4.1
